# CrunchDataConverter

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
sber_device/: main.py
sber_device/config/: configurations.py
sber_device/processing/: column_lists.py  dns_extended.py  dns_lamp_version.py  dns_new_version.py  dns_old_version.py  mvm.py
sber_device/utils/: helpers.py  io.py  mappings.py
